--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,6 @@
 
 FROM node:12 AS build
 
-
 WORKDIR /app
 
 
@@ -16,6 +15,8 @@ RUN npm run build
 
 
 FROM nginx:alpine
+#COPY nginx.conf /etc/nginx/conf.d/default.conf
+
 
 
 
