--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,20 +1,19 @@
 
-FROM node:12 AS build
+FROM node:14 AS build
 
 WORKDIR /app
 
-
 COPY package.json package-lock.json ./
+
 RUN npm install
 
-
 COPY . .
-
-
 RUN npm run build
 
 
-FROM nginx:alpine
+
+
+FROM nginx
 #COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 
@@ -22,8 +21,6 @@ FROM nginx:alpine
 
 COPY --from=build /app/build /usr/share/nginx/html
 
-
-EXPOSE 80
-
-
 CMD ["nginx", "-g", "daemon off;"]
+
+
