--- a/server/db/Dockerfile
+++ b/server/db/Dockerfile
@@ -1,11 +1,5 @@
-FROM postgres
+FROM postgres:latest
  
-
-
-
-ENV POSTGRES_DB=yelp
-ENV POSTGRES_USER=postgres
-ENV POSTGRES_PASSWORD=password123
 
 
 COPY init.sql /docker-entrypoint-initdb.d/
