--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: akshay29122003/demorepo1:web
     ports:
       - "8000:80"
+    networks:
+      - frontend_backend
 
   app:
     image: akshay29122003/demorepo1:app
@@ -12,6 +14,9 @@ services:
       - "3002:3002"
     depends_on:
       - db
+    networks:
+      - frontend_backend
+      - backend_db
     environment:
       PGHOST: db
       PGUSER_FILE: /run/secrets/pg_user_pass
@@ -22,9 +27,18 @@ services:
 
   db:
     image: akshay29122003/demorepo1:db
+    networks:
+      - backend_db
     ports:
       - "5432:5432"
     
+networks:
+  frontend_backend:
+    driver: bridge
+  backend_db:
+    driver: bridge
+
+
 
 secrets:
   pg_database:
