--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,4 +14,4 @@ sonar.sources=.
 # sonar.sourceEncoding=UTF-8
 
 # Authentication (use environment variable)
-sonar.login=${SONAR_LOGIN}
+#sonar.login=${SONAR_LOGIN}
