Update sonar-project.properties files exclusions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,3 +15,5 @@ sonar.sources=.
 
 # Authentication (use environment variable)
 #sonar.login=${SONAR_LOGIN}
+
+sonar.exclusions=**/Dockerfile,**/docker-compose.yml 
